--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,1 +1,24 @@
-<p>quote-form works!</p>
+<div class="cointainer-fluid">
+  <div class="col-md-6">
+    <div class="mb-3">
+      <label for="quote" class="form-label">Your Favourite Qoute</label>
+      <textarea class="form-control" id="quote-area" rows="3" placeholder="Tough times don't last"></textarea>
+    </div>
+
+    <div class="mb-3">
+      <label for="author" class="form-label">Author's Name</label>
+      <input type="text" class="form-control" id="authors-name" placeholder="Lurther King">
+    </div>
+
+    <div class="mb-3">
+        <label for="username" class="form-label">Your Name</label>
+        <input type="text" class="form-control" id="person-name" placeholder="John Doe">
+      </div>
+
+  </div>
+  <div class="col-md-6">
+      <h2>Quotes</h2>
+
+  </div>
+
+</div>
