--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,13 +1,13 @@
-<div class="col-md-3">
+<div class="col-md-3 ">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarText">
+        <ul class="navbar-nav mb-2 mb-lg-0" >
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active text-primary" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Add Quote</a>
+            <a class="nav-link text-success" href="#">Add Quote</a>
           </li>
         </ul>
       </div>
