st:form-styling - changes form textarea size

--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,9 +1,9 @@
-<div class="cointainer-fluid">
+<div class="container">
   <div class="row ms-3">
     <div class="col-md-4">
       <div class="mb-3">
         <label for="quote" class="form-label">Your Favourite Qoute</label>
-        <textarea class="form-control" id="quote-area" rows="3" placeholder="Tough times don't last"></textarea>
+        <textarea class="form-control" id="quote-area" rows="5" placeholder="Tough times don't last"></textarea>
       </div>
 
       <div class="mb-3">
