--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-4">
   <div class="row ms-3">
     <div class="col-md-4">
       <div class="mb-3">
@@ -19,6 +19,13 @@
     </div>
     <div class="col-md-8">
       <h2 class="text-center">Quotes</h2>
+
+      <ul *ngFor="let userquote of userquote">
+        <li>{{ userquote.id}} 
+          {{userquote.quoteContent}}
+          <p><span>upvote?{{ userquote.upvotes }}</span> -- <span> Downvote?{{ userquote.downvotes }}</span></p>
+        </li>
+      </ul>
 
     </div>
   </div>
