st:card-styling - creates a blockquote to show author name

--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -23,13 +23,23 @@
       <ul *ngFor="let userquote of userquote">
         <li class="text-center">
           <div class="card">
-            <div class="card-body" appHighlightquote> {{userquote.id}}
-            {{userquote.quoteContent}}
-            <p><span>Inspirational {{ userquote.upvotes }}</span> -- <span> Subduing {{ userquote.downvotes }}</span>
-            </p>
+             <div class="card-body" appHighlightquote>
+            <figure>
+              <blockquote class="blockquote">
+                <p>{{userquote.quoteContent}}</p>
+              </blockquote>
+
+              <figcaption class="blockquote-footer">
+                Author <cite title="Source Title">{{userquote.authorname}}</cite>
+              </figcaption>
+
+              <p><span>Inspirational {{ userquote.upvotes }}</span> -- <span> Subduing {{ userquote.downvotes }}</span>
+              </p>
+        
+            </figure>
           </div>
           <div class="card-footer text-success">
-            Author Name -{{userquote.authorname}}
+            Quote Added by <cite title="Source Title">-{{userquote.username}}</cite>   
           </div>
           </div>
         </li>
