st:form-styling - optimize form and button styling

--- a/src/app/aboutquote/aboutquote.component.html
+++ b/src/app/aboutquote/aboutquote.component.html
@@ -2,5 +2,5 @@
   Author <cite title="Source Title">{{userquote.authorname}}</cite>
 </figcaption>
 
-<p class="text-center"><span>Inspirational {{ userquote.upvotes }}</span> -- <span> Subduing {{ userquote.downvotes }}</span>
+<p class="text-center"><span>Inspirational {{ userquote.upvotes }}</span> -- <span> UnInspirational {{ userquote.downvotes }}</span>
 </p>
