st:nav-bar - moves navigation items right

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-3 ">
+<div class="col-md-12 d-flex justify-content-end mt-3 py-2">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarText">
@@ -7,7 +7,7 @@
             <a class="nav-link active text-primary" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-success" href="#">Add Quote</a>
+            <a class="nav-link text-success" href="#form">Add Quote</a>
           </li>
         </ul>
       </div>
