--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-4">
   <div class="row ms-3">
-    <div class="col-md-4 bg-light">
+    <div class="col-md-4 bg-light" id="form">
       <div class="mb-3">
         <label for="quote" class="form-label">Your Favourite Quote</label>
         <textarea class="form-control" id="quote-area" rows="5" placeholder="Tough times don't last"></textarea>
