--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,25 +1,34 @@
 <div class="container mt-4">
   <div class="row ms-3">
     <div class="col-md-4 bg-light" id="form">
-      <div class="mb-3">
-        <label for="quote" class="form-label">Your Favourite Quote</label>
-        <textarea class="form-control" id="quote-area" rows="5" placeholder="Tough times don't last"></textarea>
-      </div>
+      <form #quoteForm = 'ngForm'>
+        <h2 class="text-center">Create/ Vote Quote </h2>
+        <div class="mb-3">
+          <label for="quote" class="form-label">Your Favourite Quote</label>
+          <textarea class="form-control" id="quote-area"[(ngModel)]="newQuote.quoteContent" name="quote" rows="5" placeholder="Tough times don't last"></textarea>
+          <!-- display of user quote text -->
+          <p class="text-success ms-3">{{newQuote.quoteContent}}</p> 
+        </div>
 
-      <div class="mb-3">
-        <label for="author" class="form-label">Author's Name</label>
-        <input type="text" class="form-control" id="authors-name" placeholder="Lurther King">
-      </div>
+        <div class="mb-3">
+          <label for="author" class="form-label">Author's Name</label>
+          <input type="text" class="form-control" id="authors-name" [(ngModel)]="newQuote.authorname" placeholder="Lurther King" name="author">
+          <!-- display author name -->
+          <p class="text-primary ms-3">{{newQuote.authorname}}</p> 
+        </div>
 
-      <div class="mb-3">
-        <label for="username" class="form-label">Your Name</label>
-        <input type="text" class="form-control" id="person-name" placeholder="John Doe">
-      </div>
+        <div class="mb-3">
+          <label for="username" class="form-label">Your Name</label>
+          <input type="text" class="form-control" id="person-name" placeholder="John Doe"  [(ngModel)]="newQuote.username"  name="person-name">
+           <!-- display person name -->
+           <p class="text-danger ms-3">{{newQuote.username}}</p> 
+        </div>
 
-      <div class="mb-3 text-center">
-        <button type="button" class ="btn btn-success">Add Quote</button>
-      </div>
-    
+        <div class="mb-3 text-center">
+          <button type="button" class="btn btn-success">Add Quote</button>
+        </div>
+      </form>
+
 
     </div>
     <div class="col-md-8 bg-light">
@@ -28,17 +37,17 @@
       <ul *ngFor="let userquote of userquote">
         <li>
           <div class="card">
-             <div class="card-body" appHighlightquote>
-            <figure>
-              <!-- from the quote component that shows the quote -->
-              <app-quote [userquote]="userquote"></app-quote> 
-              <!-- importing quote details from about quote component -->
-              <app-aboutquote [userquote]="userquote"></app-aboutquote>
-            </figure>
-          </div>
-          <div class="card-footer text-success text-center">
-            Quote Added by <cite title="Source Title">-{{userquote.username}}</cite>   
-          </div>
+            <div class="card-body" appHighlightquote>
+              <figure>
+                <!-- from the quote component that shows the quote -->
+                <app-quote [userquote]="userquote"></app-quote>
+                <!-- importing quote details from about quote component -->
+                <app-aboutquote [userquote]="userquote"></app-aboutquote>
+              </figure>
+            </div>
+            <div class="card-footer text-success text-center">
+              Quote Added by <cite title="Source Title">-{{userquote.username}}</cite>
+            </div>
           </div>
         </li>
       </ul>
