--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,3 +1,4 @@
 <blockquote class="blockquote">
-  <p>{{userquote.quoteContent}}</p>
+  <p><span><fa-icon [icon]="faQuoteLeftAlt"></fa-icon> </span>  {{userquote.quoteContent}}
+    <span>  <fa-icon [icon]="faQuoteRight"></fa-icon> </span> </p>
 </blockquote>
