--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -41,6 +41,6 @@
      </div>
 
      <div class="mb-3 text-center">
-       <button type="submit" class="btn btn-success">Add Quote</button>
+       <button type="submit" class="btn btn-outline-success">Add Quote</button>
      </div>
    </form>
