st:card- displays time of quote addition

--- a/src/app/aboutquote/aboutquote.component.html
+++ b/src/app/aboutquote/aboutquote.component.html
@@ -3,4 +3,10 @@
 </figcaption>
 
 <p class="text-center"><span>Inspirational <fa-icon [icon]="faThumbsUp"></fa-icon> {{ userquote.upvotes }}</span> |
-  <span> UnInspirational <fa-icon [icon]="faThumbsDown"></fa-icon>  {{ userquote.downvotes }}</span></p>
+  <span> UnInspirational <fa-icon [icon]="faThumbsDown"></fa-icon> {{ userquote.downvotes }}</span>
+
+  <!-- <button (click)= 'quoteDelete(true)'>Delete</button> -->
+
+
+
+</p>
