ts:button - adds a button t delete quote

--- a/src/app/allquote/allquote.component.html
+++ b/src/app/allquote/allquote.component.html
@@ -24,6 +24,7 @@
               <div class="card-footer text-success text-center">
                 Quote Added by <cite title="Source Title">-{{userquote.username}} on {{userquote.additionDate}}</cite>
               </div>
+              <button (click) = "quoteDelete(true)">Delete</button>
             </div>
   
 
@@ -45,8 +46,9 @@
                 </figure>
               </div>
               <div class="card-footer text-success text-center">
-                Quote Added by <cite title="Source Title">-{{userquote.username}}</cite>
+                Quote Added by <cite title="Source Title">-{{userquote.username}} on {{userquote.additionDate}}</cite>
               </div>
+              <button  (click) = "quoteDelete(true)">Delete</button>
             </div>
   
           </li>
