st:button - adds functionality to add votes and downvotes

--- a/src/app/aboutquote/aboutquote.component.html
+++ b/src/app/aboutquote/aboutquote.component.html
@@ -2,10 +2,9 @@
   Author: <cite title="Source Title">{{userquote.authorname}}</cite>
 </figcaption>
 
-<p class="text-center"><span>Inspirational <fa-icon [icon]="faThumbsUp"></fa-icon> {{ userquote.upvotes }}</span> |
-  <span> UnInspirational <fa-icon [icon]="faThumbsDown"></fa-icon> {{ userquote.downvotes }}</span>
+<p class="text-center"><span>Inspirational <button (click)="upvoteClick()"><fa-icon [icon]="faThumbsUp"></fa-icon> </button> Votes:{{ userquote.upvotes }}</span> |
+  <span> UnInspirational<button (click)="downvoteClick()" ><fa-icon [icon]="faThumbsDown"></fa-icon> </button>{{ userquote.downvotes }}</span>
 
-
-
+  <button (click)=" deleteQuote(true)">Delete</button>
 
 </p>
