--- a/src/app/allquote/allquote.component.html
+++ b/src/app/allquote/allquote.component.html
@@ -6,54 +6,68 @@
     <div class="col-md-8 bg-light" highlightquote>
       <h2 class="text-center">Quotes</h2>
       <hr>
-      <ul *ngFor="let userquote of userquote; let i= index">
-        <div *ngIf="userquote.upvotes == highestVotes && userquote.upvotes >1; then textHighlight else noHighlight"></div>
-        <ng-template #textHighlight>
-          <li appHighlightquote>
+      <ul>
+        <div *ngFor="let userquote of userquote; let i=index">
+          <app-quote [userquote]="userquote"></app-quote>
 
-            <div class="card">
-              <div class="card-body">
-                <figure>
-                  <!-- from the quote component that shows the quote -->
-                  <app-quote [userquote]="userquote"></app-quote>
-                  <hr>
-                  <!-- importing quote details from about quote component -->
-                  <app-aboutquote [userquote]="userquote"></app-aboutquote>
-                </figure>
+          <button (click)='toggleDetails(i)'>More Info on Quote</button>
+
+          <app-aboutquote *ngIf='userquote.showDescription' [userquote]="userquote"  (isComplete) = 'quoteDelete($event,i)'></app-aboutquote>
+
+          
+          <!-- <div *ngIf="userquote.upvotes == highestVotes && userquote.upvotes >1; then textHighlight else noHighlight"> -->
+          <!-- </div> -->
+          <!-- <ng-template #textHighlight>
+
+            <li appHighlightquote>
+
+              <div class="card">
+                <div class="card-body">
+                  <figure>
+                    from the quote component that shows the quote -->
+                    
+                    <!-- <hr> 
+                   
+                     importing quote details from about quote component 
+                    <app-aboutquote *ngIf='userquote.showDescription' [userquote]="userquote"></app-aboutquote>
+                  </figure>
+                </div>
+                <div class="card-footer text-success text-center">
+                  Quote Added by <cite title="Source Title">-{{userquote.username}} on {{userquote.additionDate}}</cite>
+                </div>
+
               </div>
-              <div class="card-footer text-success text-center">
-                Quote Added by <cite title="Source Title">-{{userquote.username}} on {{userquote.additionDate}}</cite>
+
+
+            </li>
+
+
+
+          </ng-template>
+
+          <ng-template #noHighlight>
+            <li>
+
+              <div class="card">
+                <div class="card-body">
+                  <figure>
+                    <!-- from the quote component that shows the quote 
+                    <app-quote [userquote]="userquote"></app-quote>
+                    <hr>
+                    <!-- importing quote details from about quote component 
+                    <app-aboutquote [userquote]="userquote"></app-aboutquote>
+                  </figure>
+                </div>
+                <div class="card-footer text-success text-center">
+                  Quote Added by <cite title="Source Title">-{{userquote.username}} on {{userquote.additionDate}}</cite>
+                </div>
+
               </div>
-             
-            </div>
-  
 
-          </li>
+            </li>
 
-        </ng-template>
-
-        <ng-template #noHighlight>
-          <li>
-
-            <div class="card">
-              <div class="card-body">
-                <figure>
-                  <!-- from the quote component that shows the quote -->
-                  <app-quote [userquote]="userquote"></app-quote>
-                  <hr>
-                  <!-- importing quote details from about quote component -->
-                  <app-aboutquote [userquote]="userquote"></app-aboutquote>
-                </figure>
-              </div>
-              <div class="card-footer text-success text-center">
-                Quote Added by <cite title="Source Title">-{{userquote.username}} on {{userquote.additionDate}}</cite>
-              </div>
-            
-            </div>
-  
-          </li>
-
-        </ng-template>
+          </ng-template> --->
+        </div> 
       </ul>
 
 
